[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/ring.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level1.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/GameOver.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1001, 2, 0, 0, 0, 0, 1001, 600, 0, 0, 0, 0, 1, 600, 0, 0, 0, 0, 3, 2, 0, 0, 0, 0, 1001, 2 )
}

[node name="Level1" type="Node2D"]
script = ExtResource( 2 )
enemy_scene = ExtResource( 3 )
player_scene = ExtResource( 4 )
gameover_scene = ExtResource( 6 )

[node name="PlayerPosition" type="Position2D" parent="."]

[node name="EnemySpawner" type="Timer" parent="."]
wait_time = 2.0

[node name="Enemyline" type="Path2D" parent="."]
position = Vector2( 0, -2.00669 )
scale = Vector2( 1, 1.00334 )
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="Enemyline"]
position = Vector2( 1001, 2 )
rotation = 1.5708

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.239216, 0.184314, 0.184314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ring" type="Sprite" parent="CanvasLayer"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 5 )]

[connection signal="timeout" from="EnemySpawner" to="." method="_on_EnemySpawner_timeout"]
